--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Perl extension Perl::Metrics
 
 0.06 Sun Jun  4 2006
 	- Moved from Sourceforge CVS to collaborative SVN
+	- Cleaned up tests and dependencies
+	- Updgraded to Module::Install 0.62
 
 0.05 Sun Nov 13 2005
 	- Various tweaks and bug fixes
