--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Perl::Metrics
 
+0.07 Sun 10 Feb 2008
+	- Updated to Module::Install 0.68
+
 0.06 Sun Jun  4 2006
 	- Moved from Sourceforge CVS to collaborative SVN
 	- Cleaned up tests and dependencies
